Fix backwards scoping check