@@ -2,14 +2,12 @@ package org.jboss.shamrock.deployment;
 
 import java.util.HashSet;
 import java.util.IdentityHashMap;
-import java.util.Locale;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 
 import org.eclipse.microprofile.config.ConfigProvider;
 import org.jboss.builder.item.SimpleBuildItem;
-import org.jboss.shamrock.deployment.configuration.ConfigurationError;
 
 public final class ShamrockConfig extends SimpleBuildItem {
 
@@ -18,19 +16,19 @@ public final class ShamrockConfig extends SimpleBuildItem {
     private static final Map<Object, String> reverseMap = new IdentityHashMap<>();
 
     private ShamrockConfig() {
-        //not to be constructed
+
     }
 
-    public static String getString(String configKey, String defaultValue, boolean allowNull) {
-        String opt = ConfigProvider.getConfig().getOptionalValue(configKey, String.class).orElse(defaultValue);
+    public static String getString(String key, String defaultValue, boolean allowNull) {
+        String opt = ConfigProvider.getConfig().getOptionalValue(key, String.class).orElse(defaultValue);
         if (opt == null) {
             if (!allowNull) {
-                throw requiredConfigMissing(configKey);
+                throw new IllegalStateException("Excepted config property " + key + " was not found");
             }
             return null;
         }
         String retVal = new String(opt);
-        reverseMap.put(retVal, configKey);
+        reverseMap.put(retVal, key);
         return retVal;
     }
 
@@ -59,7 +57,7 @@ public final class ShamrockConfig extends SimpleBuildItem {
         if (val == null || val.isEmpty()) {
             return false;
         }
-        return asBoolean(val, configKey);
+        return Boolean.parseBoolean(val);
     }
 
     public static Boolean getBoxedBoolean(String configKey, String defaultValue, boolean allowNull) {
@@ -68,13 +66,13 @@ public final class ShamrockConfig extends SimpleBuildItem {
         Boolean result;
         if (val == null || val.isEmpty()) {
             if (!allowNull) {
-                throw requiredConfigMissing(configKey);
+                throw new IllegalStateException("Excepted config property " + configKey + " was not found");
             }
             return null;
         } else {
-            result = asBoolean(val, configKey);
+            result = Boolean.parseBoolean(val);
         }
-        result = Boolean.valueOf(result);
+        result = new Boolean(result);
         reverseMap.put(result, configKey);
         return result;
     }
@@ -85,7 +83,7 @@ public final class ShamrockConfig extends SimpleBuildItem {
         if (val == null || val.isEmpty()) {
             return 0;
         }
-        return asInteger(val, configKey);
+        return Integer.parseInt(val);
     }
 
     public static Integer getBoxedInt(String configKey, String defaultValue, boolean allowNull) {
@@ -94,48 +92,14 @@ public final class ShamrockConfig extends SimpleBuildItem {
         Integer result;
         if (val == null || val.isEmpty()) {
             if (!allowNull) {
-                throw requiredConfigMissing(configKey);
+                throw new IllegalStateException("Excepted config property " + configKey + " was not found");
             }
             return null;
         } else {
-            result = asInteger(val, configKey);
+            result = Integer.parseInt(val);
         }
-        result = Integer.valueOf(result);
+        result = new Integer(result);
         reverseMap.put(result, configKey);
         return result;
     }
-
-    private static ConfigurationError requiredConfigMissing(final String configKey) {
-        return new ConfigurationError("Required configuration property '" + configKey + "' was not defined.");
-    }
-
-    private static boolean asBoolean(final String val, final String configKey) {
-        final String cleanValue = cleanupValue(val);
-        if ("true".equals(cleanValue)) {
-            return true;
-        }
-        else if ("false".equals(cleanValue)) {
-            return false;
-        }
-        else {
-            throw new ConfigurationError("Configuration value for property '" + configKey + "' was set to '" + val + "'. " +
-                  "A boolean value is expected; set this property to either 'true' or 'false'.");
-        }
-    }
-
-    private static int asInteger(final String val, final String configKey) {
-        final String cleanValue = cleanupValue(val);
-        try {
-            return Integer.parseInt(cleanValue);
-        }
-        catch (NumberFormatException nfe) {
-            throw new ConfigurationError("Configuration value for property '" + configKey + "' was set to '" + val + "'. " +
-                  "An integer value is expected; set this property to a decimal integer.");
-        }
-    }
-
-    private static String cleanupValue(final String val) {
-        return val.trim().toLowerCase(Locale.ROOT);
-    }
-
 }
